syntax = "proto3";
 option go_package = "/gen";

message Metadata {
    string Id = 1;
    string Title = 2;
    string Description = 3;
    string Director = 4;
 }

message MovieDetails {
    float rating = 1;
    Metadata metadata = 2;
 }

service MetadataService {
    rpc GetMetadata(GetMetadataRequest) returns 
(GetMetadataResponse);
    rpc PutMetadata(PutMetadataRequest) returns 
(PutMetadataResponse);
}

message GetMetadataRequest {
    string movie_id = 1;
 }
 
message GetMetadataResponse {
    Metadata metadata = 1;
}

message PutMetadataRequest{

}

message PutMetadataResponse{

}

service RatingService {
    rpc GetAggregatedRating(GetAggregatedRatingRequest) returns 
(GetAggregatedRatingResponse);
    rpc PutRating(PutRatingRequest) returns 
(PutRatingResponse);
 }
 
message GetAggregatedRatingRequest {
    string record_id = 1;
    string record_type = 2;
 }
 
message GetAggregatedRatingResponse {
    double rating_value = 1;
 }

 message PutRatingRequest{
    string record_id = 1;
    string record_type = 2;
    string user_id =3;
    float value =4;

 }

 message PutRatingResponse{}